# projects-MRISIM

./: CMakeLists.txt  EventTimer.h  FindFFTW.cmake  MRIBatch.cpp  MRICommandLine.cpp  MRICommandLine.h  MRISIM.dist  MRIUI.cpp  MRIUI.h  MRIUI.ui  README.txt  TestCanvas.h  brain-sequence.yaml  echo-planar-sequence.yaml  gradient-echo-sequence.yaml  main.cpp  rotation-sequence.yaml  sequence.yaml  test.cl
Display/: CanvasSwitch.cpp  CanvasSwitch.h  InitCanvasQueue.h
Display/OpenGL/: PhantomCanvas.cpp  PhantomCanvas.h  SliceCanvas.h  SpinCanvas.cpp  SpinCanvas.h  TextureWindowingCanvas.h  WindowCanvas.cpp  WindowCanvas.h
Resources/: IPhantomBuilder.h  MINCPhantomBuilder.cpp  MINCPhantomBuilder.h  MINCResource.cpp  MINCResource.h  Phantom.cpp  Phantom.h  Sample3DTexture.cpp  Sample3DTexture.h  SheppLoganBuilder.cpp  SheppLoganBuilder.h  SimplePhantomBuilder.cpp  SimplePhantomBuilder.h  TestPhantomBuilder.cpp  TestPhantomBuilder.h
Scene/: SpinNode.cpp  SpinNode.h
Science/: AcquisitionData.cpp  AcquisitionData.h  BlochTest.cpp  BlochTest.h  CPUFFT.cpp  CPUFFT.h  CPUKernel.cpp  CPUKernel.h  CUDAKernel.cu  CUDAKernel.h  CartesianFFT.cpp  CartesianFFT.h  CartesianSampler.cpp  CartesianSampler.h  EchoPlanarSequence.cpp  EchoPlanarSequence.h  ExcitationPulseSequence.cpp  ExcitationPulseSequence.h  FFTData.cpp  FFTData.h  FrequencyData.cpp  FrequencyData.h  GradientEchoSequence.cpp  GradientEchoSequence.h  IFFT.h  IRFCoil.h  ImageFFT.cpp  ImageFFT.h  Kernels.cl  Kernels.cu  ListSequence.cpp  ListSequence.h  MRISim.cpp  MRISim.h  NULLSampler.h  OpenCLKernel.cpp  OpenCLKernel.h  OpenCLTest.cpp  OpenCLTest.h  RFTester.cpp  (+11 more)
tools/: convmri.c
